# 3D-BV

./: .gitignore  Praktikum.pro  README.md  main.cpp
TemplateCalibration/: CamCalib.pro  autofocus  camcalib.cpp  camcalib.h  camcalib.ui  camera_calibration.cpp  camera_calibration.h  convolution.cpp  convolution.h  convolution.ui  main.cpp  mono_calib_config.xml  stereo_calib.cpp  stereo_calib.h  stereo_calib_config.xml  video_stream.cpp  video_stream.h  visualfeatures.cpp  visualfeatures.h
TemplateCalibration/ImageList/: imagelist.xml
camera_calibration/: CMakeLists.txt  README.md  camera_calibration.cpp  default.xml
pclProject/: CMakeLists.txt  import_and_clean.cpp  import_and_clean.h  main.cpp  pclProject.pro  pclproject.cpp  pclproject.h  pclproject.ui
